--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>List Makanan Favorit</h1>
+    <h1>List lagu favorit</h1>
     <ul>
-      <li>martabak manis</li>
-      <li>nasi goreng</li>
-      <li>bebek goreng</li>
-      <li>ayam goreng</li>
-      <li>empal gentong</li>
+      <li>money tree</li>
+      <li>best part</li>
+      <li>birds of feather</li>
+      <li>escapism</li>
+      <li>nobody gets me</li>
     </ul>
   </body>
 </html>
